<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/mainMenuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="645dp"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <Button
        android:id="@+id/play"
        android:layout_width="88dp"
        android:layout_height="41dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="608dp"
        android:layout_marginBottom="8dp"
        android:text="@string/play_game"
        app:layout_constraintBottom_toTopOf="@+id/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:text="@string/help"
        app:layout_constraintBottom_toTopOf="@+id/option"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play" />

    <Button
        android:id="@+id/option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="76dp"
        android:text="@string/option"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="408dp"
        android:layout_height="193dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="45dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/help"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuText"
        app:srcCompat="@drawable/game" />
</androidx.constraintlayout.widget.ConstraintLayout>