<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="134dp"
        android:layout_height="57dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/mine_seeker"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="683dp"
        android:layout_height="139dp"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="345dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34"
        app:srcCompat="@drawable/game" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="67dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="630dp"
        android:layout_marginBottom="82dp"
        android:text="@string/by_sanyam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/skipButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="189dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="66dp"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.908" />
</androidx.constraintlayout.widget.ConstraintLayout>