<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <TextView
        android:id="@+id/optionDetail"
        android:layout_width="262dp"
        android:layout_height="42dp"
        android:layout_marginStart="222dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="247dp"
        android:layout_marginBottom="327dp"
        android:gravity="center"
        android:text="@string/set_options"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="201dp"
        android:layout_height="31dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="435dp"
        android:layout_marginBottom="16dp"
        android:text="@string/board_size"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionDetail" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="64dp"
        android:layout_height="43dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="588dp"
        android:layout_marginBottom="200dp"
        android:text="@string/mines"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>